not working correct

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 					<label for="action-input">Add Your Actions</label>
 					<input type="text" id="action-input">
 				</div>
-				<input id="addGif" type="submit" value="Add Your Actions" class="btn btn-primary">
-				<input id="removeGif" type="submit" value="Remove Your Actions" class="btn btn-primary">
+				<input id="addGif" type="submit" value="Add Your Giphy" class="btn btn-primary">
+				<input id="removeGif" type="submit" value="Remove Your Giphys" class="btn btn-primary">
 			</form>
 		</div>
 	</div>
