--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="jumbotron">
   		<div class="container">
-  			<h1>Giphy Search</h1>
+  			<h1>Giphy Searcher</h1>
   		</div>
 	</div>
 	<div id="gifButtonsView" class="container">
@@ -18,11 +18,11 @@
 		<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
 			<div id="gifView"></div>
 		</div>
-		<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+		<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3" id="inputArea">
 			<form id="gif-form" role="form">
-				<h2><legend>Action Submit</legend></h2>
+				<h2><legend>Giphy's appear above</legend></h2>
 				<div class="form-group">
-					<label for="action-input">Add Your Actions</label>
+					<label for="action-input">Add Your Giphy Below</label>
 					<input type="text" id="action-input">
 				</div>
 				<input id="addGif" type="submit" value="Add Your Giphy" class="btn btn-primary">
